load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test")
load(":relational.bzl", "relational_impl_gen")

java_binary(
    name = "JavaModelFactoryGenerator_Relational",
    srcs = ["src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/Dummy.java"],
    main_class = "org.finos.legend.pure.runtime.java.compiled.generation.orchestrator.JavaModelFactoryGenerator",
    visibility = ["//visibility:private"],
    runtime_deps = [
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-m2-dsl-mapping-pure",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure",
    ],
    deps = [
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-runtime-java-extension-compiled-dsl-mapping",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-runtime-java-extension-compiled-dsl-store",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled",
        "//legend-pure/legend-pure-store/legend-pure-store-relational/legend-pure-m2-store-relational-grammar",
    ],
)

genrule(
    name = "java_gen",
    srcs = [],
    outs = ["java_gen.srcjar"],
    cmd = """
        mkdir -p java_out_java_gen
        
        $(location :JavaModelFactoryGenerator_Relational) Relational org.finos.legend.pure.m2.relational.serialization.grammar.v1.RelationalParser java_out_java_gen > $(RULEDIR)/gen.log 2>&1
        
        cd java_out_java_gen
        find . -name "Root_*.java" ! -name "*_CompImpl.java" -delete
        zip -q -r ../$(RULEDIR)/java_gen.srcjar .
    """,
    tools = [":JavaModelFactoryGenerator_Relational"],
)

java_library(
    name = "legend-pure-runtime-java-extension-compiled-store-relational",
    srcs = [
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/Dummy.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/RelationalExtensionCompiled.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/RelationalNativeImplementation.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/CacheNextReadOnceForwardOnlyResultSet.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/CreateTempTable.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/CreateTempTableWithFinally.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/DropTempTable.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/ExecuteInDb.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/FetchDbColumnsMetaData.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/FetchDbColumnsMetaDataFunction.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/FetchDbImportedKeysMetaData.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/FetchDbImportedKeysMetaDataFunction.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/FetchDbPrimaryKeysMetaData.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/FetchDbPrimaryKeysMetaDataFunction.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/FetchDbSchemasMetaData.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/FetchDbSchemasMetaDataFunction.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/FetchDbTablesMetaData.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/FetchDbTablesMetaDataFunction.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/FindSqlTypeNameFunction.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/LoadCsvToDbTable.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/LoadValuesToDbTable.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/LoadValuesToDbTableNew.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/LogActivities.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/RelationalExecutionProperties.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/ResultSetRowIterableProvider.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/ResultSetValueHandlers.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/SqlFunction.java",
    ] + [
        ":relational_impl.srcjar",
    ],
    javacopts = [
        "-Xep:IdentityBinaryExpression:OFF",
        "-Xep:IsInstanceIncompatibleType:OFF",
        "-Xep:ComparableType:OFF",
        "-Xep:SelfEquals:OFF",
    ],
    resources = glob(
        ["src/main/resources/**/*"],
        exclude = ["src/main/resources/generator/**"],
    ),
    visibility = ["//visibility:public"],
    deps = [
        ":relational_impl_resources_import",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-m2-dsl-mapping-grammar",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-m2-dsl-mapping-pure",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-runtime-java-extension-compiled-dsl-mapping",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-runtime-java-extension-compiled-dsl-store",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-shared",
        "//legend-pure/legend-pure-store/legend-pure-store-relational/legend-pure-m2-store-relational-pure",
        "//legend-pure/legend-pure-store/legend-pure-store-relational/legend-pure-runtime-java-extension-shared-store-relational",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

java_library(
    name = "relational_gen_resource_lib",
    resource_strip_prefix = "legend-pure/legend-pure-store/legend-pure-store-relational/legend-pure-runtime-java-extension-compiled-store-relational/src/main/resources",
    resources = ["src/main/resources/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/RelationalGen.java"],
    visibility = ["//visibility:private"],
)

java_library(
    name = "generator_ext",
    srcs = [
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/Dummy.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/RelationalExtensionCompiled.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/RelationalNativeImplementation.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/CacheNextReadOnceForwardOnlyResultSet.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/CreateTempTable.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/CreateTempTableWithFinally.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/DropTempTable.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/ExecuteInDb.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/FetchDbColumnsMetaData.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/FetchDbColumnsMetaDataFunction.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/FetchDbImportedKeysMetaData.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/FetchDbImportedKeysMetaDataFunction.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/FetchDbPrimaryKeysMetaData.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/FetchDbPrimaryKeysMetaDataFunction.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/FetchDbSchemasMetaData.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/FetchDbSchemasMetaDataFunction.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/FetchDbTablesMetaData.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/FetchDbTablesMetaDataFunction.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/FindSqlTypeNameFunction.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/LoadCsvToDbTable.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/LoadValuesToDbTable.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/LoadValuesToDbTableNew.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/LogActivities.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/RelationalExecutionProperties.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/ResultSetRowIterableProvider.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/ResultSetValueHandlers.java",
        "src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/SqlFunction.java",
    ],
    resource_strip_prefix = "legend-pure/legend-pure-store/legend-pure-store-relational/legend-pure-runtime-java-extension-compiled-store-relational/src/main/resources/generator",
    resources = glob(["src/main/resources/generator/**/*"]),
    visibility = ["//visibility:private"],
    deps = [
        ":relational_gen_resource_lib",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-m2-dsl-mapping-grammar",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-m2-dsl-mapping-pure",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-runtime-java-extension-compiled-dsl-mapping",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-runtime-java-extension-compiled-dsl-store",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-shared",
        "//legend-pure/legend-pure-store/legend-pure-store-relational/legend-pure-m2-store-relational-pure",
        "//legend-pure/legend-pure-store/legend-pure-store-relational/legend-pure-runtime-java-extension-shared-store-relational",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

java_binary(
    name = "JavaCodeGeneration_Relational",
    srcs = ["src/main/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/Dummy.java"],
    main_class = "org.finos.legend.pure.runtime.java.compiled.generation.orchestrator.JavaCodeGeneration",
    visibility = ["//visibility:private"],
    runtime_deps = [
        ":generator_ext",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-m2-dsl-mapping-pure",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-m2-dsl-mapping-pure:pure_platform_dsl_mapping_par_lib",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-runtime-java-extension-compiled-dsl-mapping",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure:pure_platform_dsl_store_par_lib",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-runtime-java-extension-compiled-dsl-store",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled",
        "//legend-pure/legend-pure-store/legend-pure-store-relational/legend-pure-m2-store-relational-pure",
        "//legend-pure/legend-pure-store/legend-pure-store-relational/legend-pure-m2-store-relational-pure:pure_platform_store_relational_par_lib",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure:store-compiled-extension",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
    deps = [
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-runtime-java-extension-compiled-dsl-mapping",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-runtime-java-extension-compiled-dsl-store",
    ],
)

relational_impl_gen(
    name = "relational_impl",
    srcs = [
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-m2-dsl-mapping-pure:pure_platform_dsl_mapping_par_lib",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure:pure_platform_dsl_store_par_lib",
        "//legend-pure/legend-pure-store/legend-pure-store-relational/legend-pure-m2-store-relational-pure:pure_platform_store_relational_par_lib",
    ],
    tool = ":JavaCodeGeneration_Relational",
    visibility = ["//visibility:public"],
)

java_import(
    name = "relational_impl_resources_import",
    jars = ["relational_impl_resources.jar"],
    visibility = ["//visibility:private"],
)

java_library(
    name = "compiled-store-relational-test-gen",
    srcs = [],
    visibility = ["//visibility:public"],
    exports = [":legend-pure-runtime-java-extension-compiled-store-relational"],
)

java_test(
    name = "TestRelationalExtensionCompiled",
    srcs = ["src/test/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/TestRelationalExtensionCompiled.java"],
    test_class = "org.finos.legend.pure.runtime.java.extension.store.relational.compiled.TestRelationalExtensionCompiled",
    deps = [
        ":compiled-store-relational-test-gen",
        ":legend-pure-runtime-java-extension-compiled-store-relational",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m3-core:m3-core-test-utils",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-m2-dsl-mapping-pure",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-m2-dsl-mapping-pure:pure_platform_dsl_mapping_par_lib",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-runtime-java-extension-compiled-dsl-mapping",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure:pure_platform_dsl_store_par_lib",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-runtime-java-extension-compiled-dsl-store",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled:platform_metadata",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled/src/test/java/org/finos/legend/pure/runtime/java/compiled/runtime:CompiledClassloaderStateVerifier_lib",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled/src/test/java/org/finos/legend/pure/runtime/java/compiled/runtime:CompiledMetadataStateVerifier_lib",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled/src/test/java/org/finos/legend/pure/runtime/java/compiled/runtime:TestIdBuilder_lib",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled/src/test/java/org/finos/legend/pure/runtime/java/compiled/runtime/compiler:TestMemoryFileManager_lib",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled/src/test/java/org/finos/legend/pure/runtime/java/compiled/runtime/compiler:TestStringJavaSource_lib",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled/src/test/java/org/finos/legend/pure/runtime/java/compiled/runtime/generation:TestJavaPackageAndImportBuilder_lib",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled/src/test/java/org/finos/legend/pure/runtime/java/compiled/runtime/serialization/binary:TestDistributedBinaryGraphSerialization_lib",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled/src/test/java/org/finos/legend/pure/runtime/java/compiled/runtime/serialization/binary:TestStringCaching_lib",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled/src/test/java/org/finos/legend/pure/runtime/java/compiled/runtime/serialization/model:TestObj_lib",
        "//legend-pure/legend-pure-store/legend-pure-store-relational/legend-pure-m2-store-relational-grammar",
        "//legend-pure/legend-pure-store/legend-pure-store-relational/legend-pure-m2-store-relational-pure:pure_platform_store_relational_par_lib",
        "@legend_maven//:com_h2database_h2",
        "@legend_maven//:junit_junit",
        "@legend_maven//:org_duckdb_duckdb_jdbc",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_testutils",
        "@legend_maven//:org_hamcrest_hamcrest_core",
    ],
)

java_test(
    name = "TestPureDBFunction",
    srcs = ["src/test/java/org/finos/legend/pure/runtime/java/extension/store/relational/compiled/natives/test/TestPureDBFunction.java"],
    test_class = "org.finos.legend.pure.runtime.java.extension.store.relational.compiled.natives.test.TestPureDBFunction",
    deps = [
        ":compiled-store-relational-test-gen",
        ":legend-pure-runtime-java-extension-compiled-store-relational",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m3-core:m3-core-test-utils",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-graph/legend-pure-m2-dsl-graph-grammar",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-graph/legend-pure-m2-dsl-graph-pure:pure_platform_dsl_graph_par_lib",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-graph/legend-pure-runtime-java-extension-compiled-dsl-graph",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-m2-dsl-mapping-pure",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-m2-dsl-mapping-pure:pure_platform_dsl_mapping_par_lib",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-runtime-java-extension-compiled-dsl-mapping",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure:pure_platform_dsl_store_par_lib",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-runtime-java-extension-compiled-dsl-store",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled:platform_metadata",
        "//legend-pure/legend-pure-store/legend-pure-store-relational/legend-pure-m2-store-relational-grammar",
        "//legend-pure/legend-pure-store/legend-pure-store-relational/legend-pure-m2-store-relational-grammar:grammar-test-utils",
        "//legend-pure/legend-pure-store/legend-pure-store-relational/legend-pure-m2-store-relational-pure:pure_platform_store_relational_par_lib",
        "@legend_maven//:com_h2database_h2",
        "@legend_maven//:junit_junit",
        "@legend_maven//:org_duckdb_duckdb_jdbc",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)
